--- a/css/style.css
+++ b/css/style.css
@@ -778,3 +778,39 @@ h1, h2, h3, h4, h5,
 -moz-box-shadow: 0px 0px 18px -1px rgba(0,0,0,0.75);
 box-shadow: 0px 0px 18px -1px rgba(0,0,0,0.75);
 }
+.top-container {
+  background-color: #f1f1f1;
+  text-align: center;
+}
+
+.headerr {
+  padding: 10px 16px;
+  background: darkblue;
+  color: #f1f1f1;
+  position: static;
+  box-shadow: 0px 5px #888888;
+  z-index:1;
+  -webkit-box-shadow: -1px 4px 6px -1px rgba(0,0,0,0.75);
+  -moz-box-shadow: -1px 4px 6px -1px rgba(0,0,0,0.75);
+  box-shadow: -1px 4px 6px -1px rgba(0,0,0,0.75);
+}
+
+.content {
+  padding: 16px;
+}
+
+.sticky {
+  position: fixed;
+  top: 0;
+  width: 100%;
+}
+
+.stickyside {
+  position: fixed;
+  width: 100%;
+  margin-top: 100px;
+}
+
+.sticky + .content {
+  padding-top: 102px;
+}
