--- a/css/style.css
+++ b/css/style.css
@@ -827,10 +827,10 @@ box-shadow: 0px 0px 18px -1px rgba(0,0,0,0.75);
 }
 
 .nav-container{
-  right:0 !important;
+  right:0 ;
   position: fixed;
   transform: translateY(-50%);
-  top:50%;
+  top:85%;
   z-index: 1;
 }
 
@@ -840,27 +840,33 @@ box-shadow: 0px 0px 18px -1px rgba(0,0,0,0.75);
   background: gold;
   color: darkblue;
   text-transform: uppercase;
-  padding: 15px 0 15px 10px;
+  padding: 15px 0 15px 90px;
   margin: 5px 0;
   width: 150px;
   letter-spacing: 1.5px;
+
   box-shadow: 2px 2px 16px 0px rgba(0, 0, 0, 0.75);
   position: relative;
- margin-right: -90px;
+  margin-right: -85px;
+  transition: 0.5s ease;
+  
 }
 
 
 .nav-container a span {
+  float: left;
   width:70px;
   height:100%;
   text-align: center;
   color: gold;
   background:darkblue;
   position: absolute;
-  right:  0;
+  left:  0;
   top: 0;
+}
 
-  vertical-align: middle;
+.nav-container a span i{
+  font-size: 20px;
 }
 
 .nav-container a:hover{
@@ -941,3 +947,131 @@ box-shadow: 0px 0px 18px -1px rgba(0,0,0,0.75);
   margin: 0;
   background-color: rgb(1, 5, 56);
 }
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+    
+   @import "https://fonts.googleapis.com/css?family=Poppins:300,400,500,600,700";
+   
+   
+
+.navbar {
+    padding: 15px 10px;
+    
+    border: none;
+    border-radius: 0;
+    margin-bottom: 40px;
+    box-shadow: 1px 1px 3px rgba(0, 0, 0, 0.1);
+}
+
+.navbar-btn {
+    box-shadow: none;
+    outline: none !important;
+    border: none;
+}
+
+.line {
+    
+    height: 1px;
+    border-bottom: 1px dashed #ddd;
+    margin: 40px 0;
+}
+
+/* ---------------------------------------------------
+    SIDEBAR STYLE
+----------------------------------------------------- */
+
+
+.text-sidebar {
+  color: gold;
+}
+
+.wrapper {
+    display: flex;
+    width: 100%;
+    align-items: stretch;
+}
+
+#sidebar {
+    min-width: 150px;
+    max-width:100%;
+    
+    
+    transition: all 0.3s;
+}
+
+#mySidebar.active {
+    margin-left: -250px;
+}
+
+#sidebar .sidebar-header {
+    padding: 20px;
+    background:#6d7fcc;
+}
+
+
+#sidebar ul li a {
+    padding: 10px;
+    font-size: 1.1em;
+    display: block;
+}
+
+
+a[data-toggle="collapse"] {
+    position: relative;
+}
+
+.dropdown-toggle::after {
+    display: block;
+    position: absolute;
+    top: 50%;
+    right: 20px;
+    transform: translateY(-50%);
+}
+
+ul ul a {
+    font-size: 0.9em !important;
+    padding-left: 30px !important;
+
+}
+
+ul.CTAs {
+    padding: 20px;
+}
+
+ul.CTAs a {
+    text-align: center;
+    font-size: 0.9em !important;
+    display: block;
+    border-radius: 5px;
+    margin-bottom: 5px;
+}
+
+@media (max-width: 768px) {
+  #sidebar {
+    margin-left: -250px;
+  }
+  #mySidebar.active {
+    margin-right: 500px;
+  }
+  #sidebarCollapse span {
+    display: none;
+  }
+}
+
+
+#mySidebar #main-navs a:hover{
+  background: rgba(255, 208, 0, 0.616);
+}
+
