--- a/css/style.css
+++ b/css/style.css
@@ -791,6 +791,7 @@ box-shadow: 0px 0px 18px -1px rgba(0,0,0,0.75);
 }
 
 .headerr {
+  height: 100px;
   padding: 10px 16px;
   background: darkblue;
   color: #f1f1f1;
@@ -1075,3 +1076,107 @@ ul.CTAs a {
   background: rgba(255, 208, 0, 0.616);
 }
 
+
+#about_topic{
+  margin-top: 30px;
+}
+
+#about_banner{
+  border-radius: 5px;
+  -webkit-filter: drop-shadow(5px 5px 5px #222 );
+  filter: drop-shadow(5px 5px 5px #222);
+}
+
+#caroimg{
+  
+  -webkit-filter: drop-shadow(5px 5px 5px #222 );
+  filter: drop-shadow(5px 5px 5px #222);
+  height: 400px;
+}
+
+
+
+@media (min-width: 575.98px) {
+  .top-container{
+        height:290px;
+    }
+    #logo{
+      width: 200px;
+      -webkit-filter: drop-shadow(5px 5px 5px #222 );
+      filter: drop-shadow(5px 5px 5px #222);
+    }
+    #royalLogo{
+      width:80%;
+      padding: 10px;
+      margin-top: -30px;
+      
+      
+    }
+    #royalLogomob{
+      display:none;
+    }
+
+  #marquee{
+    -webkit-filter: drop-shadow(5px 5px 5px #222 );
+    filter: drop-shadow(5px 5px 5px #222);
+    padding: 5px 0px;
+    color: gold;
+  }
+  }
+@media (max-width: 575.98px) {
+
+  #marquee{
+    -webkit-filter: drop-shadow(5px 5px 5px #222 );
+      filter: drop-shadow(5px 5px 5px #222);
+    padding: 5px 0px;
+    background: gold;
+  }
+  #main_marquee_txt_1{
+    color: darkblue;
+    font-size:20px;
+  }
+  #main_marquee_txt_2{
+    color: darkblue;
+    font-size:10px;
+  }
+  .headerr{
+    padding: 5px 8px;
+  }
+    #carouselExampleSlidesOnly{
+      height:200px;
+      margin-bottom: 10px;
+      margin-top: -70px;
+    }
+
+    #caroimg{
+      height:200px;
+    }
+    .top-container{
+        height:100px;
+    }
+
+    #logo{
+      margin-left:-20px;
+      width: 100px;
+      -webkit-filter: drop-shadow(5px 5px 5px #222 );
+      filter: drop-shadow(5px 5px 5px #222);
+    }
+
+    #royalLogo{
+      display: none;
+    }
+
+    #royalLogomob{
+      
+      width:100px;
+      
+      height:70px;
+      margin-left:-20px;
+     
+    }
+
+    #myHeader{
+      
+      height: 150px;
+    }
+}
